@@ -11,6 +11,8 @@ var (
 	ServiceDesc = &_GoPlum_serviceDesc
 )
 
+type FactValue = isFact_Value
+
 func LoadCertificates(localCert, localKey, caCert string) ([]tls.Certificate, *x509.CertPool, error) {
 	certificate, err := tls.LoadX509KeyPair(localCert, localKey)
 	if err != nil {
