@@ -259,21 +259,110 @@ func (x *Check) GetSuspended() bool {
 	return false
 }
 
+type Fact struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	// Types that are assignable to Value:
+	//	*Fact_Int
+	//	*Fact_Str
+	Value isFact_Value `protobuf_oneof:"value"`
+}
+
+func (x *Fact) Reset() {
+	*x = Fact{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_goplum_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Fact) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Fact) ProtoMessage() {}
+
+func (x *Fact) ProtoReflect() protoreflect.Message {
+	mi := &file_goplum_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Fact.ProtoReflect.Descriptor instead.
+func (*Fact) Descriptor() ([]byte, []int) {
+	return file_goplum_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *Fact) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (m *Fact) GetValue() isFact_Value {
+	if m != nil {
+		return m.Value
+	}
+	return nil
+}
+
+func (x *Fact) GetInt() int64 {
+	if x, ok := x.GetValue().(*Fact_Int); ok {
+		return x.Int
+	}
+	return 0
+}
+
+func (x *Fact) GetStr() string {
+	if x, ok := x.GetValue().(*Fact_Str); ok {
+		return x.Str
+	}
+	return ""
+}
+
+type isFact_Value interface {
+	isFact_Value()
+}
+
+type Fact_Int struct {
+	Int int64 `protobuf:"varint,2,opt,name=int,proto3,oneof"`
+}
+
+type Fact_Str struct {
+	Str string `protobuf:"bytes,3,opt,name=str,proto3,oneof"`
+}
+
+func (*Fact_Int) isFact_Value() {}
+
+func (*Fact_Str) isFact_Value() {}
+
 type Result struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Check  string `protobuf:"bytes,1,opt,name=check,proto3" json:"check,omitempty"`
-	Time   int64  `protobuf:"varint,2,opt,name=time,proto3" json:"time,omitempty"`
-	Result Status `protobuf:"varint,3,opt,name=result,proto3,enum=api.Status" json:"result,omitempty"`
-	Detail string `protobuf:"bytes,4,opt,name=detail,proto3" json:"detail,omitempty"`
+	Check  string  `protobuf:"bytes,1,opt,name=check,proto3" json:"check,omitempty"`
+	Time   int64   `protobuf:"varint,2,opt,name=time,proto3" json:"time,omitempty"`
+	Result Status  `protobuf:"varint,3,opt,name=result,proto3,enum=api.Status" json:"result,omitempty"`
+	Detail string  `protobuf:"bytes,4,opt,name=detail,proto3" json:"detail,omitempty"`
+	Facts  []*Fact `protobuf:"bytes,5,rep,name=facts,proto3" json:"facts,omitempty"`
 }
 
 func (x *Result) Reset() {
 	*x = Result{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_goplum_proto_msgTypes[3]
+		mi := &file_goplum_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -286,7 +375,7 @@ func (x *Result) String() string {
 func (*Result) ProtoMessage() {}
 
 func (x *Result) ProtoReflect() protoreflect.Message {
-	mi := &file_goplum_proto_msgTypes[3]
+	mi := &file_goplum_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -299,7 +388,7 @@ func (x *Result) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Result.ProtoReflect.Descriptor instead.
 func (*Result) Descriptor() ([]byte, []int) {
-	return file_goplum_proto_rawDescGZIP(), []int{3}
+	return file_goplum_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *Result) GetCheck() string {
@@ -330,6 +419,13 @@ func (x *Result) GetDetail() string {
 	return ""
 }
 
+func (x *Result) GetFacts() []*Fact {
+	if x != nil {
+		return x.Facts
+	}
+	return nil
+}
+
 type Empty struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -339,7 +435,7 @@ type Empty struct {
 func (x *Empty) Reset() {
 	*x = Empty{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_goplum_proto_msgTypes[4]
+		mi := &file_goplum_proto_msgTypes[5]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -352,7 +448,7 @@ func (x *Empty) String() string {
 func (*Empty) ProtoMessage() {}
 
 func (x *Empty) ProtoReflect() protoreflect.Message {
-	mi := &file_goplum_proto_msgTypes[4]
+	mi := &file_goplum_proto_msgTypes[5]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -365,7 +461,7 @@ func (x *Empty) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Empty.ProtoReflect.Descriptor instead.
 func (*Empty) Descriptor() ([]byte, []int) {
-	return file_goplum_proto_rawDescGZIP(), []int{4}
+	return file_goplum_proto_rawDescGZIP(), []int{5}
 }
 
 var File_goplum_proto protoreflect.FileDescriptor
@@ -387,34 +483,41 @@ var file_goplum_proto_rawDesc = []byte{
 	0x73, 0x74, 0x61, 0x74, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x0b, 0x2e, 0x61, 0x70,
 	0x69, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x05, 0x73, 0x74, 0x61, 0x74, 0x65, 0x12,
 	0x1c, 0x0a, 0x09, 0x73, 0x75, 0x73, 0x70, 0x65, 0x6e, 0x64, 0x65, 0x64, 0x18, 0x06, 0x20, 0x01,
-	0x28, 0x08, 0x52, 0x09, 0x73, 0x75, 0x73, 0x70, 0x65, 0x6e, 0x64, 0x65, 0x64, 0x22, 0x6f, 0x0a,
-	0x06, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x63, 0x68, 0x65, 0x63, 0x6b,
-	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x63, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x12, 0x0a,
-	0x04, 0x74, 0x69, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x74, 0x69, 0x6d,
-	0x65, 0x12, 0x23, 0x0a, 0x06, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28,
-	0x0e, 0x32, 0x0b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x06,
-	0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c,
-	0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x22, 0x07,
-	0x0a, 0x05, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x2a, 0x32, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75,
-	0x73, 0x12, 0x11, 0x0a, 0x0d, 0x49, 0x4e, 0x44, 0x45, 0x54, 0x45, 0x52, 0x4d, 0x49, 0x4e, 0x41,
-	0x54, 0x45, 0x10, 0x00, 0x12, 0x08, 0x0a, 0x04, 0x47, 0x4f, 0x4f, 0x44, 0x10, 0x01, 0x12, 0x0b,
-	0x0a, 0x07, 0x46, 0x41, 0x49, 0x4c, 0x49, 0x4e, 0x47, 0x10, 0x02, 0x32, 0xd6, 0x01, 0x0a, 0x06,
-	0x47, 0x6f, 0x50, 0x6c, 0x75, 0x6d, 0x12, 0x24, 0x0a, 0x07, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74,
-	0x73, 0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0b, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x30, 0x01, 0x12, 0x27, 0x0a, 0x09,
-	0x47, 0x65, 0x74, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x73, 0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e,
-	0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63,
-	0x6b, 0x4c, 0x69, 0x73, 0x74, 0x12, 0x26, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x43, 0x68, 0x65, 0x63,
-	0x6b, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d,
-	0x65, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x2a, 0x0a,
-	0x0c, 0x53, 0x75, 0x73, 0x70, 0x65, 0x6e, 0x64, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x0e, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65, 0x1a, 0x0a, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x29, 0x0a, 0x0b, 0x52, 0x65, 0x73,
-	0x75, 0x6d, 0x65, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43,
-	0x68, 0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43,
-	0x68, 0x65, 0x63, 0x6b, 0x42, 0x1e, 0x5a, 0x1c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
-	0x6f, 0x6d, 0x2f, 0x63, 0x73, 0x6d, 0x69, 0x74, 0x68, 0x2f, 0x67, 0x6f, 0x70, 0x6c, 0x75, 0x6d,
-	0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x28, 0x08, 0x52, 0x09, 0x73, 0x75, 0x73, 0x70, 0x65, 0x6e, 0x64, 0x65, 0x64, 0x22, 0x4b, 0x0a,
+	0x04, 0x46, 0x61, 0x63, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x12, 0x0a, 0x03, 0x69, 0x6e, 0x74,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x48, 0x00, 0x52, 0x03, 0x69, 0x6e, 0x74, 0x12, 0x12, 0x0a,
+	0x03, 0x73, 0x74, 0x72, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x48, 0x00, 0x52, 0x03, 0x73, 0x74,
+	0x72, 0x42, 0x07, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x90, 0x01, 0x0a, 0x06, 0x52,
+	0x65, 0x73, 0x75, 0x6c, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x63, 0x68, 0x65, 0x63, 0x6b, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x63, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x12, 0x0a, 0x04, 0x74,
+	0x69, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x74, 0x69, 0x6d, 0x65, 0x12,
+	0x23, 0x0a, 0x06, 0x72, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0e, 0x32,
+	0x0b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x52, 0x06, 0x72, 0x65,
+	0x73, 0x75, 0x6c, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x18, 0x04,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x64, 0x65, 0x74, 0x61, 0x69, 0x6c, 0x12, 0x1f, 0x0a, 0x05,
+	0x66, 0x61, 0x63, 0x74, 0x73, 0x18, 0x05, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x09, 0x2e, 0x61, 0x70,
+	0x69, 0x2e, 0x46, 0x61, 0x63, 0x74, 0x52, 0x05, 0x66, 0x61, 0x63, 0x74, 0x73, 0x22, 0x07, 0x0a,
+	0x05, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x2a, 0x32, 0x0a, 0x06, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73,
+	0x12, 0x11, 0x0a, 0x0d, 0x49, 0x4e, 0x44, 0x45, 0x54, 0x45, 0x52, 0x4d, 0x49, 0x4e, 0x41, 0x54,
+	0x45, 0x10, 0x00, 0x12, 0x08, 0x0a, 0x04, 0x47, 0x4f, 0x4f, 0x44, 0x10, 0x01, 0x12, 0x0b, 0x0a,
+	0x07, 0x46, 0x41, 0x49, 0x4c, 0x49, 0x4e, 0x47, 0x10, 0x02, 0x32, 0xd6, 0x01, 0x0a, 0x06, 0x47,
+	0x6f, 0x50, 0x6c, 0x75, 0x6d, 0x12, 0x24, 0x0a, 0x07, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x73,
+	0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0b, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x52, 0x65, 0x73, 0x75, 0x6c, 0x74, 0x30, 0x01, 0x12, 0x27, 0x0a, 0x09, 0x47,
+	0x65, 0x74, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x73, 0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b,
+	0x4c, 0x69, 0x73, 0x74, 0x12, 0x26, 0x0a, 0x08, 0x47, 0x65, 0x74, 0x43, 0x68, 0x65, 0x63, 0x6b,
+	0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65,
+	0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x2a, 0x0a, 0x0c,
+	0x53, 0x75, 0x73, 0x70, 0x65, 0x6e, 0x64, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x0e, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65, 0x1a, 0x0a, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x29, 0x0a, 0x0b, 0x52, 0x65, 0x73, 0x75,
+	0x6d, 0x65, 0x43, 0x68, 0x65, 0x63, 0x6b, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68,
+	0x65, 0x63, 0x6b, 0x4e, 0x61, 0x6d, 0x65, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x43, 0x68,
+	0x65, 0x63, 0x6b, 0x42, 0x1e, 0x5a, 0x1c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x63, 0x73, 0x6d, 0x69, 0x74, 0x68, 0x2f, 0x67, 0x6f, 0x70, 0x6c, 0x75, 0x6d, 0x2f,
+	0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -430,34 +533,36 @@ func file_goplum_proto_rawDescGZIP() []byte {
 }
 
 var file_goplum_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_goplum_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
+var file_goplum_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_goplum_proto_goTypes = []interface{}{
 	(Status)(0),       // 0: api.Status
 	(*CheckName)(nil), // 1: api.CheckName
 	(*CheckList)(nil), // 2: api.CheckList
 	(*Check)(nil),     // 3: api.Check
-	(*Result)(nil),    // 4: api.Result
-	(*Empty)(nil),     // 5: api.Empty
+	(*Fact)(nil),      // 4: api.Fact
+	(*Result)(nil),    // 5: api.Result
+	(*Empty)(nil),     // 6: api.Empty
 }
 var file_goplum_proto_depIdxs = []int32{
 	3, // 0: api.CheckList.checks:type_name -> api.Check
 	0, // 1: api.Check.state:type_name -> api.Status
 	0, // 2: api.Result.result:type_name -> api.Status
-	5, // 3: api.GoPlum.Results:input_type -> api.Empty
-	5, // 4: api.GoPlum.GetChecks:input_type -> api.Empty
-	1, // 5: api.GoPlum.GetCheck:input_type -> api.CheckName
-	1, // 6: api.GoPlum.SuspendCheck:input_type -> api.CheckName
-	1, // 7: api.GoPlum.ResumeCheck:input_type -> api.CheckName
-	4, // 8: api.GoPlum.Results:output_type -> api.Result
-	2, // 9: api.GoPlum.GetChecks:output_type -> api.CheckList
-	3, // 10: api.GoPlum.GetCheck:output_type -> api.Check
-	3, // 11: api.GoPlum.SuspendCheck:output_type -> api.Check
-	3, // 12: api.GoPlum.ResumeCheck:output_type -> api.Check
-	8, // [8:13] is the sub-list for method output_type
-	3, // [3:8] is the sub-list for method input_type
-	3, // [3:3] is the sub-list for extension type_name
-	3, // [3:3] is the sub-list for extension extendee
-	0, // [0:3] is the sub-list for field type_name
+	4, // 3: api.Result.facts:type_name -> api.Fact
+	6, // 4: api.GoPlum.Results:input_type -> api.Empty
+	6, // 5: api.GoPlum.GetChecks:input_type -> api.Empty
+	1, // 6: api.GoPlum.GetCheck:input_type -> api.CheckName
+	1, // 7: api.GoPlum.SuspendCheck:input_type -> api.CheckName
+	1, // 8: api.GoPlum.ResumeCheck:input_type -> api.CheckName
+	5, // 9: api.GoPlum.Results:output_type -> api.Result
+	2, // 10: api.GoPlum.GetChecks:output_type -> api.CheckList
+	3, // 11: api.GoPlum.GetCheck:output_type -> api.Check
+	3, // 12: api.GoPlum.SuspendCheck:output_type -> api.Check
+	3, // 13: api.GoPlum.ResumeCheck:output_type -> api.Check
+	9, // [9:14] is the sub-list for method output_type
+	4, // [4:9] is the sub-list for method input_type
+	4, // [4:4] is the sub-list for extension type_name
+	4, // [4:4] is the sub-list for extension extendee
+	0, // [0:4] is the sub-list for field type_name
 }
 
 func init() { file_goplum_proto_init() }
@@ -503,7 +608,7 @@ func file_goplum_proto_init() {
 			}
 		}
 		file_goplum_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*Result); i {
+			switch v := v.(*Fact); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -515,6 +620,18 @@ func file_goplum_proto_init() {
 			}
 		}
 		file_goplum_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Result); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_goplum_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*Empty); i {
 			case 0:
 				return &v.state
@@ -527,13 +644,17 @@ func file_goplum_proto_init() {
 			}
 		}
 	}
+	file_goplum_proto_msgTypes[3].OneofWrappers = []interface{}{
+		(*Fact_Int)(nil),
+		(*Fact_Str)(nil),
+	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_goplum_proto_rawDesc,
 			NumEnums:      1,
-			NumMessages:   5,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
